--- a/.github/workflows/infrastructure.transfer.yml
+++ b/.github/workflows/infrastructure.transfer.yml
@@ -62,14 +62,9 @@ jobs:
               run: |
                   docker save openvpn_service:latest | ssh ${{ secrets.VPN_SERVER_USERNAME }}@${{ secrets.VPN_SERVER_HOST }} 'docker load'
 
-            - name: Upload compose file
-              uses: appleboy/scp-action@v1
-              with:
-                  host: ${{ secrets.VPN_SERVER_HOST }}
-                  username: ${{ secrets.VPN_SERVER_USERNAME }}
-                  key: ${{ secrets.VPN_SERVER_SSH_KEY }}
-                  source: ./apps/infrastructure/docker-compose.yml
-                  target: ${{ secrets.VPN_SERVER_INFRA_DIRECTORY }}/docker-compose.yml
+            - name: Upload docker-compose.yml via SSH
+              run: |
+                  cat ./apps/infrastructure/docker-compose.yml | ssh ${{ secrets.VPN_SERVER_USERNAME }}@${{ secrets.VPN_SERVER_HOST }} "cat > ${{ secrets.VPN_SERVER_INFRA_DIRECTORY }}/docker-compose.yml"
 
             - name: Restart containers on server
               run: |
