--- a/.github/workflows/keys-bot.transfer.yml
+++ b/.github/workflows/keys-bot.transfer.yml
@@ -24,6 +24,16 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@v4
 
+            - name: Setup SSH
+              uses: webfactory/ssh-agent@v0.9.1
+              with:
+                  ssh-private-key: ${{ secrets.VPN_SERVER_SSH_KEY }}
+
+            - name: Add VPN server to known hosts
+              run: |
+                  mkdir -p ~/.ssh
+                  ssh-keyscan -H ${{ secrets.VPN_SERVER_HOST }} >> ~/.ssh/known_hosts
+
             - name: Create .env file
               run: |
                   touch .env
@@ -35,37 +45,16 @@ jobs:
             - name: Build Docker image
               run: docker compose -f ./docker-compose.yml build --no-cache
               working-directory: apps/keys
-
-            - name: Save Docker image
-              run: docker save keys-bot -o keys-bot.tar
-              working-directory: apps/keys
-
             - name: Upload Docker image
-              uses: appleboy/scp-action@v1
-              with:
-                  host: ${{ secrets.VPN_SERVER_HOST }}
-                  username: ${{ secrets.VPN_SERVER_USERNAME }}
-                  key: ${{ secrets.VPN_SERVER_SSH_KEY }}
-                  source: ./apps/keys/keys-bot.tar
-                  target: ${{ secrets.VPN_SERVER_APP_DIRECTORY }}/keys-bot.tar
+              working-directory: apps/keys
+              run: |
+                  docker save keys-bot:latest | ssh ${{ secrets.VPN_SERVER_USERNAME }}@${{ secrets.VPN_SERVER_HOST }} 'docker load'
+            - name: Upload docker-compose.yml via SSH
+              run: |
+                  cat ./apps/keys/docker-compose.yml | ssh ${{ secrets.VPN_SERVER_USERNAME }}@${{ secrets.VPN_SERVER_HOST }} "cat > ${{ secrets.VPN_SERVER_APP_DIRECTORY }}/docker-compose.yml"
 
-            - name: Upload compose file
-              uses: appleboy/scp-action@v1
-              with:
-                  host: ${{ secrets.VPN_SERVER_HOST }}
-                  username: ${{ secrets.VPN_SERVER_USERNAME }}
-                  key: ${{ secrets.VPN_SERVER_SSH_KEY }}
-                  source: ./apps/keys/docker-compose.yml
-                  target: ${{ secrets.VPN_SERVER_APP_DIRECTORY }}/docker-compose.yml
-
-            - name: Load and run Docker image
-              uses: appleboy/ssh-action@v1.2.2
-              with:
-                  host: ${{ secrets.VPN_SERVER_HOST }}
-                  username: ${{ secrets.VPN_SERVER_USERNAME }}
-                  key: ${{ secrets.VPN_SERVER_SSH_KEY }}
-                  script: |
-                      cd ${{ secrets.VPN_SERVER_APP_DIRECTORY }}
-                      docker load -i keys-bot.tar
-                      docker compose up -d --no-build app
-                      rm keys-bot.tar
+            - name: Restart container on server
+              run: |
+                  ssh ${{ secrets.VPN_SERVER_USERNAME }}@${{ secrets.VPN_SERVER_HOST }} '
+                    cd ${{ secrets.VPN_SERVER_APP_DIRECTORY }}
+                    docker compose up -d
