--- a/.github/workflows/keys-bot.transfer.yml
+++ b/.github/workflows/keys-bot.transfer.yml
@@ -50,11 +50,13 @@ jobs:
               run: |
                   docker save keys-bot:latest | ssh ${{ secrets.VPN_SERVER_USERNAME }}@${{ secrets.VPN_SERVER_HOST }} 'docker load'
             - name: Upload docker-compose.yml via SSH
+              working-directory: apps/keys
               run: |
-                  cat ./apps/keys/docker-compose.yml | ssh ${{ secrets.VPN_SERVER_USERNAME }}@${{ secrets.VPN_SERVER_HOST }} "cat > ${{ secrets.VPN_SERVER_APP_DIRECTORY }}/docker-compose.yml"
+                  cat docker-compose.yml | ssh ${{ secrets.VPN_SERVER_USERNAME }}@${{ secrets.VPN_SERVER_HOST }} "cat > ${{ secrets.VPN_SERVER_APP_DIRECTORY }}/docker-compose.yml"
 
             - name: Restart container on server
               run: |
                   ssh ${{ secrets.VPN_SERVER_USERNAME }}@${{ secrets.VPN_SERVER_HOST }} '
                     cd ${{ secrets.VPN_SERVER_APP_DIRECTORY }}
                     docker compose up -d
+                  '
