--- a/apps/keys/Dockerfile
+++ b/apps/keys/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:lts-bookworm-slim
 WORKDIR /app
 
-COPY package.json package-lock.json tsconfig.json .env ./
+COPY package.json package-lock.json tsconfig.json ./
 COPY src/ ./src
 
 RUN npm ci && npm run build && NODE_ENV=production npm ci --omit=dev
