--- a/.github/workflows/keys-bot.3xui.transfer.yml
+++ b/.github/workflows/keys-bot.3xui.transfer.yml
@@ -21,6 +21,16 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@v4
 
+            - name: Setup SSH
+              uses: webfactory/ssh-agent@v0.9.1
+              with:
+                  ssh-private-key: ${{ secrets.VPN_SERVER_SSH_KEY }}
+
+            - name: Add VPN server to known hosts
+              run: |
+                  mkdir -p ~/.ssh
+                  ssh-keyscan -H ${{ secrets.VPN_SERVER_HOST }} >> ~/.ssh/known_hosts              
+
             - name: Build Docker image
               working-directory: apps/keys
               run: docker compose -f ./docker-compose.bot.3xui.yml build --no-cache
