--- a/apps/users/Dockerfile
+++ b/apps/users/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:lts-alpine
 WORKDIR /app
-COPY package.json package-lock.json sheets-api.json .env ./
+COPY package.json package-lock.json sheets-api.json ./
 COPY dist/ ./dist
 COPY prisma/ ./prisma
 RUN NODE_ENV=production npm ci --omit=dev
