--- a/.github/workflows/users-bot.yml
+++ b/.github/workflows/users-bot.yml
@@ -8,46 +8,38 @@ on:
 jobs:
     build_and_deploy:
         runs-on: ubuntu-latest
+        environment: ${{ inputs.environment }}
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
 
-            - name: Setup Node
-              uses: actions/setup-node@v4
+            - name: Setup SSH
+              uses: webfactory/ssh-agent@v0.9.1
               with:
-                  node-version: 22
+                  ssh-private-key: ${{ secrets.VPN_SERVER_SSH_KEY }}
 
-            - name: Install dependencies
-              run: npm ci
+            - name: Add VPN server to known hosts
+              run: |
+                  mkdir -p ~/.ssh
+                  ssh-keyscan -H ${{ secrets.VPN_SERVER_HOST }} >> ~/.ssh/known_hosts
+
+            - name: Build Docker image
               working-directory: apps/users
+              run: docker compose build --no-cache
 
-            - name: Build
-              run: touch sheets-api.json && npm run build
+            - name: Upload Docker image
               working-directory: apps/users
+              run: |
+                  docker save users-bot:latest | ssh ${{ secrets.VPN_SERVER_USERNAME }}@${{ secrets.VPN_SERVER_HOST }} 'docker load'
 
-            - name: Archive dist
-              run: tar -czf dist.tar.gz dist
+            - name: Upload docker-compose.yml via SSH
               working-directory: apps/users
+              run: |
+                  cat docker-compose.yml | ssh ${{ secrets.VPN_SERVER_USERNAME }}@${{ secrets.VPN_SERVER_HOST }} "cat > ${{ secrets.VPN_SERVER_APP_DIRECTORY }}/docker-compose.yml"
 
-            - name: Upload to server
-              uses: appleboy/scp-action@v1
-              with:
-                  host: ${{ secrets.DB_SERVER_HOST }}
-                  username: ${{ secrets.DB_SERVER_USERNAME }}
-                  key: ${{ secrets.DB_SERVER_SSH_KEY }}
-                  source: ./apps/users/dist.tar.gz
-                  target: ${{ secrets.DB_SERVER_APP_DIRECTORY }}
-
-            - name: Deploy via SSH
-              uses: appleboy/ssh-action@v1.2.2
-              with:
-                  host: ${{ secrets.DB_SERVER_HOST }}
-                  username: ${{ secrets.DB_SERVER_USERNAME }}
-                  key: ${{ secrets.DB_SERVER_SSH_KEY }}
-                  script: |
-                      cd ${{ secrets.DB_SERVER_APP_DIRECTORY }}/apps/users
-                      git pull
-                      tar -xzf dist.tar.gz
-                      rm dist.tar.gz
-                      cp sheets-api.json dist/
-                      docker-compose up --build -d
+            - name: Restart container on server
+              run: |
+                  ssh ${{ secrets.VPN_SERVER_USERNAME }}@${{ secrets.VPN_SERVER_HOST }} '
+                    cd ${{ secrets.VPN_SERVER_APP_DIRECTORY }}
+                    docker compose up -d
+                  '
