--- a/.github/workflows/users-bot.yml
+++ b/.github/workflows/users-bot.yml
@@ -16,12 +16,12 @@ jobs:
             - name: Setup SSH
               uses: webfactory/ssh-agent@v0.9.1
               with:
-                  ssh-private-key: ${{ secrets.VPN_SERVER_SSH_KEY }}
+                  ssh-private-key: ${{ secrets.DB_SERVER_SSH_KEY }}
 
             - name: Add VPN server to known hosts
               run: |
                   mkdir -p ~/.ssh
-                  ssh-keyscan -H ${{ secrets.VPN_SERVER_HOST }} >> ~/.ssh/known_hosts
+                  ssh-keyscan -H ${{ secrets.DB_SERVER_HOST }} >> ~/.ssh/known_hosts
 
             - name: Build Docker image
               working-directory: apps/users
@@ -30,16 +30,16 @@ jobs:
             - name: Upload Docker image
               working-directory: apps/users
               run: |
-                  docker save users-bot:latest | ssh ${{ secrets.VPN_SERVER_USERNAME }}@${{ secrets.VPN_SERVER_HOST }} 'docker load'
+                  docker save users-bot:latest | ssh ${{ secrets.DB_SERVER_USERNAME }}@${{ secrets.DB_SERVER_HOST }} 'docker load'
 
             - name: Upload docker-compose.yml via SSH
               working-directory: apps/users
               run: |
-                  cat docker-compose.yml | ssh ${{ secrets.VPN_SERVER_USERNAME }}@${{ secrets.VPN_SERVER_HOST }} "cat > ${{ secrets.VPN_SERVER_APP_DIRECTORY }}/docker-compose.yml"
+                  cat docker-compose.yml | ssh ${{ secrets.DB_SERVER_USERNAME }}@${{ secrets.DB_SERVER_HOST }} "cat > ${{ secrets.DB_SERVER_APP_DIRECTORY }}/docker-compose.yml"
 
             - name: Restart container on server
               run: |
-                  ssh ${{ secrets.VPN_SERVER_USERNAME }}@${{ secrets.VPN_SERVER_HOST }} '
-                    cd ${{ secrets.VPN_SERVER_APP_DIRECTORY }}
+                  ssh ${{ secrets.DB_SERVER_USERNAME }}@${{ secrets.DB_SERVER_HOST }} '
+                    cd ${{ secrets.DB_SERVER_APP_DIRECTORY }}
                     docker compose up -d
                   '
