--- a/apps/users/Dockerfile
+++ b/apps/users/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:lts-alpine
 WORKDIR /app
 COPY package.json package-lock.json sheets-api.json ./
-COPY dist/ ./dist
+COPY src/ ./src
 COPY prisma/ ./prisma
-RUN NODE_ENV=production npm ci --omit=dev
+RUN npm ci && npm run build && NODE_ENV=production npm ci --omit=dev
 RUN npx prisma generate
 
 CMD ["node", "dist/src/index.js"]
