--- a/apps/users/Dockerfile
+++ b/apps/users/Dockerfile
@@ -1,9 +1,8 @@
 FROM node:lts-alpine
 WORKDIR /app
-COPY package.json package-lock.json sheets-api.json ./
+COPY package.json package-lock.json tsconfig.json tsconfig.base.json sheets-api.json ./
 COPY src/ ./src
 COPY prisma/ ./prisma
 RUN npm ci && npm run build && NODE_ENV=production npm ci --omit=dev
-RUN npx prisma generate
 
 CMD ["node", "dist/src/index.js"]
