--- a/apps/users/docker-compose.yml
+++ b/apps/users/docker-compose.yml
@@ -7,4 +7,4 @@ services:
             dockerfile: ./Dockerfile
         env_file: .env
         network_mode: host
-        restart: unless-stopped
+        restart: always
