--- a/.github/workflows/keys-bot.3xui.transfer.yml
+++ b/.github/workflows/keys-bot.3xui.transfer.yml
@@ -49,5 +49,5 @@ jobs:
               run: |
                   ssh ${{ secrets.VPN_SERVER_USERNAME }}@${{ secrets.VPN_SERVER_HOST }} '
                     cd ${{ secrets.VPN_SERVER_APP_DIRECTORY }}
-                    docker compose -f ./docker-compose.bot.3xui.yml up -d
+                    docker compose up -d
                   '
