Added IKEv2 volume

--- a/apps/infrastructure/docker-compose.yml
+++ b/apps/infrastructure/docker-compose.yml
@@ -21,6 +21,7 @@ services:
         network_mode: host
         volumes:
             - /etc/ipsec.d:/etc/ipsec.d
+            - /srv/ikev2:/srv/ikev2
             - /lib/modules:/lib/modules:ro
             - /usr/bin/ikev2.sh:/usr/bin/ikev2.sh:ro
             - /etc/sysctl.conf:/etc/sysctl.conf:ro
