--- a/.github/workflows/infrastructure.transfer.yml
+++ b/.github/workflows/infrastructure.transfer.yml
@@ -17,6 +17,7 @@ on:
 jobs:
     build-deploy:
         runs-on: ubuntu-latest
+        timeout-minutes: 10
         environment: ${{ inputs.environment }}
         steps:
             - name: Checkout
