--- a/.github/workflows/users-bot.yml
+++ b/.github/workflows/users-bot.yml
@@ -9,6 +9,7 @@ jobs:
     build_and_deploy:
         runs-on: ubuntu-latest
         environment: ${{ inputs.environment }}
+        timeout-minutes: 10
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
