--- a/.github/workflows/ikev2.transfer.yml
+++ b/.github/workflows/ikev2.transfer.yml
@@ -41,7 +41,12 @@ jobs:
             - name: Upload IKEv2 to server
               working-directory: apps/infrastructure
               run: |
-                  docker save ikev2_service:latest | ssh ${{ secrets.VPN_SERVER_USERNAME }}@${{ secrets.VPN_SERVER_HOST }} 'docker load'
+                  docker save ikev2_service:latest \
+                  | gzip \
+                  | ssh -o ServerAliveInterval=15 \
+                          -o ServerAliveCountMax=8 \
+                          ${{ secrets.VPN_SERVER_USERNAME }}@${{ secrets.VPN_SERVER_HOST }} \
+                          'gunzip | docker load'
 
             - name: Upload docker-compose.yml via SSH
               run: |
