--- a/.github/workflows/users-bot.yml
+++ b/.github/workflows/users-bot.yml
@@ -35,7 +35,12 @@ jobs:
             - name: Upload Docker image
               working-directory: apps/users
               run: |
-                  docker save users-bot:latest | ssh ${{ secrets.DB_SERVER_USERNAME }}@${{ secrets.DB_SERVER_HOST }} 'docker load'
+                  docker save users-bot:latest \
+                  | gzip \
+                  | ssh -o ServerAliveInterval=15 \
+                          -o ServerAliveCountMax=8 \
+                          ${{ secrets.VPN_SERVER_USERNAME }}@${{ secrets.VPN_SERVER_HOST }} \
+                          'gunzip | docker load'
 
             - name: Upload docker-compose.yml via SSH
               working-directory: apps/users
