--- a/.github/workflows/users-bot.yml
+++ b/.github/workflows/users-bot.yml
@@ -39,7 +39,7 @@ jobs:
                   | gzip \
                   | ssh -o ServerAliveInterval=15 \
                           -o ServerAliveCountMax=8 \
-                          ${{ secrets.VPN_SERVER_USERNAME }}@${{ secrets.VPN_SERVER_HOST }} \
+                          ${{ secrets.DB_SERVER_USERNAME }}@${{ secrets.DB_SERVER_HOST }} \
                           'gunzip | docker load'
 
             - name: Upload docker-compose.yml via SSH
