Replaced with --production

--- a/apps/backups/Dockerfile
+++ b/apps/backups/Dockerfile
@@ -5,5 +5,5 @@ RUN echo 'https://dl-cdn.alpinelinux.org/alpine/edge/main/' > /etc/apk/repositor
 RUN apk update && apk upgrade && apk add postgresql17-client
 COPY package.json bun.lock .env tsconfig.json /backups/
 COPY src/ ./src
-RUN bun install --omit dev --frozen-lockfile
+RUN bun install --production --frozen-lockfile
 CMD [ "bun", "src/index.ts" ]
