--- a/apps/keys/Dockerfile
+++ b/apps/keys/Dockerfile
@@ -4,5 +4,5 @@ WORKDIR /app
 COPY package.json bun.lock tsconfig.json ./
 COPY src/ ./src
 
-RUN bun install --omit dev --frozen-lockfile
+RUN bun install --production --frozen-lockfile
 CMD [ "bun", "src/index.ts" ]
