--- a/apps/users/Dockerfile
+++ b/apps/users/Dockerfile
@@ -3,6 +3,6 @@ WORKDIR /app
 COPY package.json bun.lock tsconfig.json tsconfig.base.json sheets-api.json ./
 COPY src/ ./src
 COPY prisma/ ./prisma
-RUN bun install --frozen-lockfile && bunx prisma generate && bun install --omit dev --frozen-lockfile
+RUN bun install --frozen-lockfile && bunx prisma generate && bun install --production
 
 CMD ["bun", "src/index.ts"]
