Pasarguard user creation. Export expenses. Trial/unpaid users management

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,9 +17,7 @@
 			"type": "typescript",
 			"tsconfig": "apps/keys/tsconfig.json",
 			"option": "watch",
-			"problemMatcher": [
-				"$tsc-watch"
-			],
+			"problemMatcher": ["$tsc-watch"],
 			"group": "build",
 			"label": "tsc: watch - apps/keys/tsconfig.json"
 		},
@@ -27,9 +25,7 @@
 			"type": "typescript",
 			"tsconfig": "apps/users/tsconfig.json",
 			"option": "watch",
-			"problemMatcher": [
-				"$tsc-watch"
-			],
+			"problemMatcher": ["$tsc-watch"],
 			"group": "build",
 			"label": "tsc: watch - apps/users/tsconfig.json"
 		},
@@ -37,18 +33,14 @@
 			"type": "typescript",
 			"tsconfig": "apps/users/tsconfig.dev.json",
 			"option": "watch",
-			"problemMatcher": [
-				"$tsc-watch"
-			],
+			"problemMatcher": ["$tsc-watch"],
 			"group": "build",
 			"label": "tsc: watch - apps/users/tsconfig.dev.json"
 		},
 		{
 			"type": "typescript",
 			"tsconfig": "apps/users/tsconfig.dev.json",
-			"problemMatcher": [
-				"$tsc"
-			],
+			"problemMatcher": ["$tsc"],
 			"group": "build",
 			"label": "tsc: build - apps/users/tsconfig.dev.json"
 		},
