--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"main": "src/main.ts",
 	"type": "module",
 	"scripts": {
-		"lint": "eslint apps/**",
-		"lint:fix": "eslint --fix apps/**",
+		"lint": "eslint apps/users/src/**",
+		"lint:fix": "eslint --fix apps/users/src/**",
 		"format": "prettier --write ."
 	},
 	"repository": {
