--- a/apps/users/tsconfig.base.json
+++ b/apps/users/tsconfig.base.json
@@ -1,10 +1,10 @@
 {
 	"compilerOptions": {
 		"outDir": "dist",
-		"module": "commonjs",
+		"module": "nodenext",
 		"target": "es2024",
 		"lib": ["ES2024"],
-		"moduleResolution": "node",
+		"moduleResolution": "nodenext",
 		"skipLibCheck": true,
 		"resolveJsonModule": true,
 		"esModuleInterop": true
