--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,14 @@
 			"envFile": "${workspaceFolder}/apps/infrastructure/ikev2/.env"
 		},
 		{
+			"name": "Launch WireGuard receiver",
+			"type": "go",
+			"request": "launch",
+			"mode": "debug",
+			"program": "${workspaceFolder}/apps/infrastructure/wireguard/receiver.go",
+			"envFile": "${workspaceFolder}/apps/infrastructure/wireguard/.env"
+		},
+		{
 			"name": "Launch Keys Bot",
 			"program": "${workspaceFolder}/apps/keys/src/index.ts",
 			"request": "launch",
