--- a/.github/workflows/ikev2.transfer.yml
+++ b/.github/workflows/ikev2.transfer.yml
@@ -12,6 +12,9 @@ on:
                     - turkey
                     - us2
                     - neth
+                    - brazil
+                    - albania
+                    - fin
 
 jobs:
     build-deploy:
