--- a/.github/workflows/infrastructure.transfer.yml
+++ b/.github/workflows/infrastructure.transfer.yml
@@ -14,6 +14,7 @@ on:
                     - neth
                     - fin
                     - albania
+                    - brazil
 
 jobs:
     build-deploy:
