--- a/.github/workflows/wg.transfer.yml
+++ b/.github/workflows/wg.transfer.yml
@@ -12,6 +12,8 @@ on:
                     - turkey
                     - us2
                     - neth
+                    - brazil
+                    - albania
 
 jobs:
     build-deploy:
