Introduced prometheus workflow

--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -4,8 +4,8 @@ services:
         container_name: prometheus
         network_mode: host
         volumes:
-            - ../../monitoring/prometheus/config:/etc/prometheus
-            - ../../monitoring/prometheus/data:/prometheus
+            - ./prometheus/config:/etc/prometheus
+            - ./prometheus/data:/prometheus
         command: ['--config.file=/etc/prometheus/prometheus.yml', '--web.listen-address=:9099']
         restart: unless-stopped
 
