--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -1,8 +1,16 @@
+global:
+    scrape_interval: 15s
+    evaluation_interval: 15s
+
 scrape_configs:
     - job_name: 'prometheus'
       static_configs:
-          - targets: ['localhost:9099']
+          - targets: ['localhost:9090']
 
     - job_name: 'node'
       static_configs:
-          - targets: ['localhost:9100']
+          - targets: ['localhost:9100'] # Node Exporter
+
+    - job_name: 'wg'
+      static_configs:
+          - targets: ['localhost:9586'] # Wireguard
